# kdd99_feature_extractor

./: CMakeLists.txt  LICENSE  README.md
Feature extractor/: Config.cpp  Config.h  Connection.cpp  Conversation.cpp  Conversation.h  ConversationFeatures.cpp  ConversationFeatures.h  ConversationReconstructor.cpp  ConversationReconstructor.h  FeatureUpdater.cpp  FeatureUpdater.h  FeatureUpdaterCount.cpp  FeatureUpdaterCount.h  FeatureUpdaterTime.cpp  FeatureUpdaterTime.h  FiveTuple.cpp  FiveTuple.h  Frame.cpp  Frame.h  IcmpConversation.cpp  IcmpConversation.h  IntervalKeeper.cpp  IntervalKeeper.h  IpDatagram.cpp  IpDatagram.h  IpFragment.cpp  IpFragment.h  IpReassembler.cpp  IpReassembler.h  IpReassemblyBuffer.cpp  IpReassemblyBuffer.h  IpReassemblyBufferHoleList.cpp  IpReassemblyBufferHoleList.h  Packet.cpp  Packet.h  PcapReader.cpp  (+33 more)
src/: CMakeLists.txt  Config.cpp  Config.h  Conversation.cpp  Conversation.h  ConversationFeatures.cpp  ConversationFeatures.h  ConversationReconstructor.cpp  ConversationReconstructor.h  FeatureUpdater.h  FeatureUpdaterCount.h  FeatureUpdaterTime.h  FiveTuple.cpp  IntervalKeeper.cpp  IntervalKeeper.h  IpDatagram.cpp  IpFragment.cpp  IpFragment.h  IpReassemblyBuffer.cpp  IpReassemblyBufferHoleList.cpp  IpReassemblyBufferHoleList.h  Packet.cpp  ReferenceCounter.h  Sniffer.cpp  Sniffer.h  StatsCollector.h  StatsEngine.h  StatsPerHost.cpp  StatsPerHost.h  StatsPerService.cpp  StatsPerService.h  StatsPerServiceWithSrcPort.h  StatsWindow.cpp  StatsWindow.h  StatsWindowCount.cpp  StatsWindowTime.cpp  StatsWindowTime.h  TcpConnection.cpp  TcpConnection.h  Timestamp.cpp  (+7 more)
(+6 files in other folders)
